@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2026-02-12T02:22:13Z",
-  "count_outdated" : 131,
-  "uniques_outdated" : 113,
+  "timestamp" : "2026-02-14T02:05:07Z",
+  "count_outdated" : 132,
+  "uniques_outdated" : 114,
   "count" : 134,
   "uniques" : 116,
   "clones" : [
-    {
-      "timestamp": "2026-01-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2026-01-29T00:00:00Z",
       "count": 0,
@@ -124,6 +115,15 @@
     },
     {
       "timestamp": "2026-02-10T00:00:00Z",
+      "count": 0,
+      "count_minmax": [ 0, 0 ],
+      "count_decinc": [ 0, 0 ],
+      "uniques": 0,
+      "uniques_minmax": [ 0, 0 ],
+      "uniques_decinc": [ 0, 0 ]
+    },
+    {
+      "timestamp": "2026-02-11T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
