@@ -1,12 +1,7 @@
 {
-  "count": 3,
-  "uniques": 3,
+  "count": 2,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2026-01-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2026-01-29T00:00:00Z",
       "count": 0,
@@ -69,6 +64,11 @@
     },
     {
       "timestamp": "2026-02-10T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-02-11T00:00:00Z",
       "count": 0,
       "uniques": 0
     }
